--- a/assets/css/data/utility.css
+++ b/assets/css/data/utility.css
@@ -1,13 +1,13 @@
 @charset "utf-8";
 
 :root {
-  --app-black: #020304;
+  --app-black: #1c1d20;
   --app-white: #fff;
   --app-orange: #ffb225;
 }
 
 .section-space {
-  padding: 80px 0;
+  padding: 100px 0;
 }
 
 .container {
