--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,12 @@ nav ul {
   max-width: 400px;
 }
 
+.media-links {
+  img {
+    width: 16px;
+  }
+}
+
 .resume-btn {
   width: 195px;
   height: 60px;
