remove-media-links

--- a/assets/css/data/utility.css
+++ b/assets/css/data/utility.css
@@ -3,7 +3,8 @@
 :root {
   --app-black: #1c1d20;
   --app-white: #fff;
-  --app-orange: #ffb225;
+  --app-orange: #D9BF77;
+  --app-blue: #111235;
 }
 
 .section-space {
