--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,7 @@ nav ul {
   background-color: var(--app-white);
   color: var(--app-black);
   position: relative;
+  margin-bottom: 100px;
 
   .container {
     display: flex;
@@ -131,6 +132,66 @@ nav ul {
   position: absolute;
   bottom: 0;
 }
+
+/* Skills */
+.skills {
+  background-color: #f5f5f544;
+
+  .container {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    gap: 20px;
+  }
+}
+
+.skill-container {
+  display: flex;
+  gap: 10px;
+  margin: 20px 0;
+}
+
+.bar {
+  width: 400px;
+  height: 20px;
+  border-radius: 10px;
+  border: 1.5px solid var(--app-orange);
+  overflow: hidden;
+
+  .bar-level {
+    background-color: var(--app-orange);
+    height: 100%;
+    width: 0;
+    transition: width 0.8s ease;
+  }
+}
+
+.skill-container:nth-of-type(2) .bar-level {
+  width: 80%;
+  height: 100%;
+  background-color: var(--app-orange);
+}
+
+.skill-container:nth-of-type(3) .bar-level {
+  width: 90%;
+  height: 100%;
+  background-color: var(--app-orange);
+}
+
+
+.skill-container:nth-of-type(4) .bar-level {
+  width: 85%;
+  height: 100%;
+  background-color: var(--app-orange);
+}
+
+
+.skill-container:nth-of-type(5) .bar-level {
+  width: 70%;
+  height: 100%;
+  background-color: var(--app-orange);
+}
+
 
 /* Recent Works */
 .projects {
@@ -208,6 +269,11 @@ nav ul {
 .git-btn {
   color: var(--app-orange);
   border: 1px solid var(--app-orange);
+}
+
+/* Contact */
+.contact {
+
 }
 
 /* Media Query */
