--- a/assets/css/data/reset.css
+++ b/assets/css/data/reset.css
@@ -23,3 +23,10 @@ button {
   border: none;
   cursor: pointer;
 }
+
+input, textarea {
+  outline: none;
+  border: none;  
+  font-family: "Poppins", sans-serif;
+  resize: none;
+}
