--- a/assets/css/data/utility.css
+++ b/assets/css/data/utility.css
@@ -32,3 +32,14 @@
   font-size: 50px;
   font-weight: 400;
 }
+
+.position-down {
+  transition: bottom 0.5s ease, opacity 0.5s ease;
+  position: relative;
+  bottom: -50px;
+  opacity: 0;
+}
+
+.position-reset {
+  bottom: 0;
+}
