--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,33 +160,6 @@ nav ul {
   width: 0;
   transition: width 0.8s ease;
 }
-/*
-.skill-container:nth-of-type(2) .bar-level {
-  width: 80%;
-  height: 100%;
-  background-color: var(--app-orange);
-}
-
-.skill-container:nth-of-type(3) .bar-level {
-  width: 90%;
-  height: 100%;
-  background-color: var(--app-orange);
-}
-
-
-.skill-container:nth-of-type(4) .bar-level {
-  width: 85%;
-  height: 100%;
-  background-color: var(--app-orange);
-}
-
-
-.skill-container:nth-of-type(5) .bar-level {
-  width: 70%;
-  height: 100%;
-  background-color: var(--app-orange);
-}
-*/
 
 /* Recent Works */
 .projects {  
@@ -355,6 +328,28 @@ footer {
     font-family: "Berkshire Swash", sans-serif;
   }
 }
+
+.load-animation {
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 10;
+  background-color: var(--app-black);
+  color: var(--app-white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  text-align: center;
+  transition: height 0.5s ease;
+  overflow: hidden;
+}
+
+.heading-two {
+  color: var(--app-orange);
+}
+
 /* Media Query */
 @media screen and (min-width:865px) {
   .project-picture-box {
