--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,13 @@ header {
     border-radius: 5px;
   }
 
+  .fa-bars {
+    display: none;
+    font-size: 23px;
+    cursor: pointer;
+    color: var(--app-white);
+  }
+
   h1 {    
     color: var(--app-orange);
     font-family: "Berkshire Swash", sans-serif;
@@ -53,7 +60,6 @@ nav ul {
 }
 
 .hero-content {
-  width: 100%;
   z-index: 1;
   padding: 69px 0 10px;
   background-image: linear-gradient(to right, #0000008c, #0000001b);
@@ -69,17 +75,7 @@ nav ul {
   h1 {
     font-size: 60px;
   } 
-}/*
-
-.hero-overlay {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  z-index: 0;
-  top: 0;
-  background-image: linear-gradient(to right, #0000008c, #0000001b);
 }
-*/
 
 .hero-img-box {
   position: absolute;
@@ -153,6 +149,7 @@ nav ul {
   .square:nth-of-type(2) {
     bottom: -50px;
     left: -50px;
+    background-color: var(--app-black);
   }
 }
 
@@ -345,6 +342,7 @@ footer {
   .container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   h2 {    
@@ -403,8 +401,66 @@ footer {
     padding: 80px 0;
   }
 
+  .hero-img-box img {
+    width: 240px;
+  }
+}
+
+@media screen and (max-width: 985px) {
+  .hero {
+    position: relative;
+    z-index: -1;
+  }
+
   .hero-img-box {
     z-index: -1;
+    bottom: 30px;
+    rotate: 10deg;
+    
+    img {
+      width: 200px;
+    }
+  }
+
+  .contact-title .break {
+    display: inline;
+  }
+}
+
+@media screen and (max-width:880px) {
+  .hero h1 {
+    font-size: 55px;
+  }
+
+  header h1 {
+    font-size: 35px;
+  }
+  
+  .section-title-size {
+    font-size: 40px;
+  }
+
+  .project-context {
+    h3 {
+      font-size: 30px;
+    }
+
+    p {
+      font-size: 14px;
+    }
+  }
+  
+  .about-pic-container img {
+    width: 300px;
+  }
+
+  .resume-btn {
+    width: 135px;
+    height: 55px;
+  }
+
+  .bar {
+    width: 300px;
   }
 }
 
@@ -420,3 +476,161 @@ footer {
   }
 }
 
+@media screen and (max-width:795px) {
+  .hero h1 {
+    font-size: 50px;
+  }
+
+  .section-title-size {
+    font-size: 38px;
+  }
+
+  .contact-me .contact-flex {
+    gap: 10px;
+    input, textarea {
+      width: 400px;
+    }
+  }
+
+  header { 
+    .container {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    nav, button {
+      display: none;
+    }
+
+    .fa-bars {
+      display: inline;
+    }
+  }
+}
+
+@media screen and (max-width: 725px) {
+  .about-headline {
+    padding-bottom: 140px;
+
+    .break {
+      display: inline;
+    }
+
+    p {
+      max-width: 100%;
+    }
+  }
+
+  .about-pic-container {
+    position: absolute;
+    bottom: -100px;
+    right: 50px;
+
+    .square {
+      width: 130px;
+      height: 130px;
+    }
+
+    .square:nth-of-type(1) {
+      left: -50px;
+    }
+
+    .square:nth-of-type(2) {
+      left: 100px;
+    }
+
+    img {
+      width: 180px;
+    }
+  }
+
+  .skills .container {
+    display: grid;
+  }
+
+  .skill-container {
+    display: flex;
+
+    .bar {
+      order: 2;
+    }
+
+    .p-font-size {
+      width: 38px;
+    }
+  }
+
+  .bar {
+    width: 400px;
+  }
+
+  .contact-flex {
+    display: grid;
+    
+    form {
+      padding-top: 50px;
+      justify-self: center;
+    }
+  }
+
+  .my-contact {
+    padding-top: 20px;
+  }  
+}
+
+@media screen and (max-width: 600px) {
+  .about-pic-container{
+    padding: 15px;
+    background-color: var(--app-orange);
+    
+    .square {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 545px) {
+  .hero h1 {
+    font-size: 40px;
+  }
+
+  .section-title-size {
+    font-size: 30px;
+  }
+
+  .p-font-size {
+    font-size: 14px;
+  }
+
+  footer .container {
+    gap: 13px;
+
+    .p-font-size {
+      font-size: 9px;
+    }
+  }
+
+  .bar {
+    width: 100%;
+  }
+
+  .about-pic-container {
+    right: 0;
+
+    img {
+      width: 150px;
+    }
+  }
+}
+
+
+@media screen and (max-width: 430px) {
+  .hero h1 {
+    font-size: 37.5px;
+  }
+  .contact-me .contact-flex {
+    input, textarea {
+      width: 300px;
+    }
+  }
+}
